# algokit-core-branch

./: .gitignore  Cargo.toml
.github/workflows/: android_ci.yml  ci_cd.yml  swift_ci.yml
crates/algokit_crypto/: Cargo.toml
crates/algokit_crypto/src/: ed25519.rs  lib.rs
crates/algokit_crypto/src/algo25/: english.rs  mod.rs
crates/algokit_crypto_ffi/: Cargo.toml  build.rs  uniffi.toml
crates/algokit_crypto_ffi/src/: algo25.rs  lib.rs
crates/algokit_transact/: Cargo.toml
crates/algokit_transact/src/: address.rs  error.rs  lib.rs  signer.rs
crates/algokit_transact/src/test_utils/: app_call.rs  asset_config.rs  mod.rs
crates/algokit_transact/src/transactions/: app_call.rs  asset_config.rs  asset_freeze.rs  asset_transfer.rs  key_registration.rs
crates/algokit_transact_ffi/: Cargo.toml
crates/algokit_transact_ffi/src/: lib.rs  signer.rs
docs/book/contributing/: ffi_types.md
tools/build_pkgs/src/: android.rs  main.rs  swift.rs
utils/: semantic-release.cjs
